# random-password-generator

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build_exe.yml
src/: core.py  main.py
